--- a/assets/sass/layout/_sections.scss
+++ b/assets/sass/layout/_sections.scss
@@ -35,6 +35,7 @@
   width: 100%;
   height: 592px;
 }
+
 .contact__map {
   width: 100%;
   height: 100%;
@@ -61,6 +62,27 @@
   margin-right: 15px;
 }
 
+// Blog
+.blog__form {
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  .btn {
+    width: 100%;
+    margin-top: 15px;
+    text-align: center;
+  }
+}
+
+.blog__input {
+  font-family: $BODY_FONT;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  padding: 7px 16px;
+  outline: none;
+  width: 100%;
+}
+
 @media screen and (min-width: 1200px) {
   .contact__box {
     margin-left: 130px;
@@ -73,5 +95,22 @@
   .blog__title-btn {
     justify-content: flex-end;
     margin-top: 46px;
+  }
+
+  .blog__form {
+    margin-top: 24px;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
+
+    .btn {
+      margin-top: 0;
+      width: unset;
+      text-align: left;
+    }
+  }
+
+  .blog__input {
+    margin-right: 15px;
+    max-width: 270px;
   }
 }
